# effetune-mac-optimize

./: .gitattributes  .gitignore  package.json
electron/: ipc-handlers.js  main.js  preload.js
js/: app.js  audio-manager.js
js/audio/: audio-context-manager.js  audio-io-manager.js  pipeline-processor.js
plugins/: audio-processor.js  plugin-base.js
plugins/analyzer/: spectrum_analyzer.js  spectrum_analyzer_gpu.js
plugins/dynamics/: auto_leveler.js  brickwall_limiter.js  multiband_compressor.js  transient_shaper.js
plugins/eq/: fifteen_band_peq.js  five_band_peq.js
plugins/saturation/: sub_synth.js
plugins/wasm/: auto_leveler.wasm  brickwall_limiter.wasm  fifteen_band_peq.wasm  five_band_peq.wasm  multiband_compressor.wasm  spectrum_analyzer.wasm  sub_synth.wasm  transient_shaper.wasm
scripts/: ab-test.js  build-wasm.js
wasm-src/auto-leveler/: Cargo.toml
wasm-src/auto-leveler/src/: lib.rs
wasm-src/auto-leveler/tests/: ab_compare.js
wasm-src/brickwall-limiter/: Cargo.toml
wasm-src/brickwall-limiter/src/: filter.rs  lib.rs
wasm-src/brickwall-limiter/tests/: ab_compare.js  bench.js
wasm-src/fifteen-band-peq/: Cargo.toml
wasm-src/fifteen-band-peq/src/: lib.rs
wasm-src/fifteen-band-peq/tests/: ab_compare.js
wasm-src/five-band-peq/: Cargo.toml
wasm-src/five-band-peq/src/: biquad.rs  design.rs  (+1 more)
wasm-src/multiband-compressor/: Cargo.toml
wasm-src/peq-dsp/: Cargo.toml
wasm-src/peq-dsp/src/: biquad.rs  design.rs  lib.rs
wasm-src/spectrum-analyzer/: Cargo.toml
wasm-src/sub-synth/: Cargo.toml
wasm-src/transient-shaper/: Cargo.toml
(+15 files in other folders)
